go dialogs microservice
